--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "openai": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "wouter": "^2.10.0"
+  },
   "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "standard": "^17.0.0",
@@ -19,8 +28,5 @@
     "extends": [
       "./node_modules/standard/eslintrc.json"
     ]
-  },
-  "dependencies": {
-    "openai": "^3.2.1"
   }
 }
